; ModuleID = '/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_hash.c_DeleteHashTable.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/opengl/mesa/extr_hash.c_DeleteHashTable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.HashTable = type { %struct.HashTable*, %struct.HashTable** }
%struct.HashEntry = type { %struct.HashEntry*, %struct.HashEntry** }

@TABLE_SIZE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @DeleteHashTable(%struct.HashTable* %0) #0 {
  %2 = alloca %struct.HashTable*, align 8
  %3 = alloca i64, align 8
  %4 = alloca %struct.HashEntry*, align 8
  %5 = alloca %struct.HashEntry*, align 8
  store %struct.HashTable* %0, %struct.HashTable** %2, align 8
  %6 = load %struct.HashTable*, %struct.HashTable** %2, align 8
  %7 = call i32 @assert(%struct.HashTable* %6)
  store i64 0, i64* %3, align 8
  br label %8

8:                                                ; preds = %32, %1
  %9 = load i64, i64* %3, align 8
  %10 = load i64, i64* @TABLE_SIZE, align 8
  %11 = icmp ult i64 %9, %10
  br i1 %11, label %12, label %35

12:                                               ; preds = %8
  %13 = load %struct.HashTable*, %struct.HashTable** %2, align 8
  %14 = getelementptr inbounds %struct.HashTable, %struct.HashTable* %13, i32 0, i32 1
  %15 = load %struct.HashTable**, %struct.HashTable*** %14, align 8
  %16 = load i64, i64* %3, align 8
  %17 = getelementptr inbounds %struct.HashTable*, %struct.HashTable** %15, i64 %16
  %18 = load %struct.HashTable*, %struct.HashTable** %17, align 8
  %19 = bitcast %struct.HashTable* %18 to %struct.HashEntry*
  store %struct.HashEntry* %19, %struct.HashEntry** %4, align 8
  br label %20

20:                                               ; preds = %23, %12
  %21 = load %struct.HashEntry*, %struct.HashEntry** %4, align 8
  %22 = icmp ne %struct.HashEntry* %21, null
  br i1 %22, label %23, label %31

23:                                               ; preds = %20
  %24 = load %struct.HashEntry*, %struct.HashEntry** %4, align 8
  %25 = getelementptr inbounds %struct.HashEntry, %struct.HashEntry* %24, i32 0, i32 0
  %26 = load %struct.HashEntry*, %struct.HashEntry** %25, align 8
  store %struct.HashEntry* %26, %struct.HashEntry** %5, align 8
  %27 = load %struct.HashEntry*, %struct.HashEntry** %4, align 8
  %28 = bitcast %struct.HashEntry* %27 to %struct.HashTable*
  %29 = call i32 @free(%struct.HashTable* %28)
  %30 = load %struct.HashEntry*, %struct.HashEntry** %5, align 8
  store %struct.HashEntry* %30, %struct.HashEntry** %4, align 8
  br label %20

31:                                               ; preds = %20
  br label %32

32:                                               ; preds = %31
  %33 = load i64, i64* %3, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %3, align 8
  br label %8

35:                                               ; preds = %8
  %36 = load %struct.HashTable*, %struct.HashTable** %2, align 8
  %37 = call i32 @free(%struct.HashTable* %36)
  ret void
}

declare dso_local i32 @assert(%struct.HashTable*) #1

declare dso_local i32 @free(%struct.HashTable*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
